--- a/packages/storage-legacy-platform/package.json
+++ b/packages/storage-legacy-platform/package.json
@@ -4,7 +4,7 @@
   "description": "A storage adapator that works with the legacy Recogito v.3 annotation platform",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development -d",
+    "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
   },
   "author": "Rainer Simon",
@@ -14,13 +14,13 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.11.0"
+    "css-loader": "^3.2.0"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "html-webpack-plugin": "^5.4.0",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
