--- a/plugins/annotorious-sequence-mode/package.json
+++ b/plugins/annotorious-sequence-mode/package.json
@@ -7,7 +7,7 @@
     "dist"
   ],
   "scripts": {
-    "start": "webpack-dev-server --open --mode=development -d",
+    "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production"
   },
   "license": "BSD-3-Clause",
@@ -17,13 +17,12 @@
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.43.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
