--- a/plugins/annotorious-map-annotation/package.json
+++ b/plugins/annotorious-map-annotation/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@recogito/annotorious-map-annotation",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "An Annotorious plugin for annotating maps",
-  "main": "src/index.js",
+  "main": "dist/annotorious-map-annotation.js",
   "scripts": {
     "start": "webpack serve --open --mode=development",
     "build": "webpack --mode=production",
